Fontawesome icons can be used: closes #49 Keyword used is icon: rather than fa: The classes for emojis and icons can now be used: closes #50. The small, smaller and smallest class names have been used as the default size of 1rem is too small to make even smaller sizes useful. The names now go big, bigger, biggest, massive, giant. In the SlideProblemPresenter, skip is always available and Forwards is no longer used. This closes #51.

--- a/src/assets/styles/lessons.css
+++ b/src/assets/styles/lessons.css
@@ -312,3 +312,25 @@ ul.presentation,
 .MarksPresenter .certificate-date {
   text-align: center;
 }
+
+/*
+* icon sizing. The small, smaller and smallest classes are not particularly useful.
+* The default is small.
+*/
+.giant {
+  font-size: 1000%;
+}
+.massive {
+  font-size: 800%;
+}
+.biggest {
+  font-size: 600%;
+}
+
+.bigger {
+  font-size: 400%;
+}
+
+.big {
+  font-size: 200%;
+}
